@@ -1,3 +1,10 @@
+2005-08-25  Don Porter  <dgp@users.sourceforge.net>
+
+	[kennykb-numerics-branch]
+
+	* generic/tclBasic.c:	Extended the domain of round(.) to all
+	non-Inf, non-NaN doubles, using bignums for the result as needed.
+
 2005-08-24  Kevin Kenny  <kennykb@users.sourceforge.net>
 
 	[kennykb-numerics-branch]
